--- a/src/sass/partials/_games.scss
+++ b/src/sass/partials/_games.scss
@@ -9,19 +9,14 @@
     & img {
         height: 150px;
         object-fit: cover;
-
     }
-  
 }
-
-
 .card-title.h5 {
     font-size: 1em;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
-
 .search {
     margin: 2em 0;
 }
@@ -33,8 +28,35 @@
 .clear-search__button {
     margin-left: 10px;
 }
-.detail-image img{
+.details img{
     object-fit: cover;
-    height: 400px;
+    height: 350px;
     width: 100%;
 } 
+.details button {
+    margin:20px 0;
+    text-align: left;
+}
+.details button a{
+    color:white;
+}
+.details .fas {
+float: right;
+
+}
+.details_genres p,
+.details_platforms p {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+    margin-bottom: 10px;
+    padding:6px 12px;
+    border-radius: .25rem;
+}
+.card_title{
+    padding: 10px;
+    text-align: center;
+    background-color: gray;
+    color:white;
+    margin-bottom: 0;;
+}
