--- a/src/sass/partials/_games.scss
+++ b/src/sass/partials/_games.scss
@@ -18,7 +18,7 @@
     text-overflow: ellipsis;
 }
 .search {
-    margin: 2em 0;
+    margin: 1.6em 0;
 }
 
 .clear-search {
@@ -44,6 +44,26 @@
 float: right;
 
 }
+#button_like {
+   background-color: lightcoral;
+   border-color: white;
+
+}
+
+#button_like:hover {
+    background-color: red;
+    
+ 
+ }
+
+.card-header{
+    padding: 5px;
+    background-color: #6c757d;
+    grid-template-columns: auto 40px;
+    gap: 10px ;
+    display: grid;
+}
+
 .details_genres p,
 .details_platforms p {
     color: #fff;
@@ -56,7 +76,36 @@ float: right;
 .card_title{
     padding: 10px;
     text-align: center;
-    background-color: gray;
+    background-color: #6c757d;
     color:white;
     margin-bottom: 0;;
+}
+.likedGames{
+    display: grid;
+    grid-template-columns: 120px auto;
+    gap: 10px ;
+    margin-bottom: 20px;
+}
+
+.likedGames-games li {
+    background-color: #6c757d;
+    color: white;
+    padding: 10px;
+    display: inline-block;
+    text-decoration: none;
+    border-radius: 5px;
+    margin:10px;
+}
+.likedGames-title{
+    align-self: center;
+ 
+    padding: 10px;
+    border-radius: 5px;
+    display: block;
+ 
+  
+}
+.likedGames-title p {
+
+    margin: 0;
 }
